# pretty-down

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  demo.webm
examples/: example_video.webm  showcase.md
examples/themes/: dracula.json  solarized.json
src/: font.rs  highlight.rs  main.rs  math.rs  pager.rs  renderer.rs  sixel.rs  theme.rs
src/pager/: flatten.rs  line.rs  mod.rs
src/renderer/: ansi.rs  html.rs  mod.rs  table.rs
