[package]
name = "pretty-down"
version = "0.1.0"
edition = "2024"

[dependencies]
pulldown-cmark = "0.13.3"
a-sixel = "0.6.1"
rustybuzz = "0.20.1"
raqote = { version = "0.8.5", default-features = false }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
quick-xml = "0.39.2"
comfy-table = "7.2.2"
notify = "9.0.0-rc.2"
